# avcodec

./: .gitignore  .gitmodules  Android.mk  CMakeLists.txt  README.md  android_toolchain.cmake  codec_api.cpp  codec_av.h  decoder.cpp  decoder.h  encoder.cpp
include/: codec_api.h
plugin/: omx_codec.cpp
src/: codec_api.cpp  codec_av.h  decoder.cpp  decoder.h  encoder.cpp  encoder.h  log_print.h
src/plugin/: aenc_faac.cpp  aenc_fdk_faac.cpp  omx_codec.cpp  vdec_mediacodec.cpp  venc_x264.cpp
test/: codec_test.cpp  omx_test.cpp
