# CMake version
cmake_minimum_required (VERSION 2.8)

# project
project (dtcodec)

LIST(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}")

# DEFS
if(ANDROID)
    SET(LINUX FALSE)
    ADD_DEFINITIONS(-DENABLE_ANDROID)
    MESSAGE("TARGET: ANDROID")
else()
    SET(LINUX TRUE)
    ADD_DEFINITIONS(-DENABLE_LINUX)
    MESSAGE("TARGET: LINUX")
endif()

# Target
INCLUDE_DIRECTORIES(include)
INCLUDE_DIRECTORIES(src)
AUX_SOURCE_DIRECTORY(src SRC_CODEC)
AUX_SOURCE_DIRECTORY(src/plugin SRC_CODEC)
ADD_LIBRARY(dtcodec STATIC ${SRC_CODEC})
if(ANDROID)
    TARGET_LINK_LIBRARIES(dtcodec OpenMAXAL)
    TARGET_LINK_LIBRARIES(dtcodec log)
endif()

#TARGET_LINK_LIBRARIES(dtcodec pthread)

# target - test
ADD_EXECUTABLE(codec_test test/codec_test.cpp)
TARGET_LINK_LIBRARIES(codec_test dtcodec)

INSTALL(TARGETS dtcodec
#RUNTIME DESTINATION bin
LIBRARY DESTINATION lib
ARCHIVE DESTINATION lib
)
INSTALL(DIRECTORY include/ DESTINATION /usr/local/include/${PROJECT_NAME})

