# CMake version
cmake_minimum_required (VERSION 2.8)

# project
project (dtcodec)

LIST(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}")

SET(CMAKE_VERBOSE_MAKEFILE ON)

# DEFS
if(ANDROID)
    SET(LINUX FALSE)
    ADD_DEFINITIONS(-DENABLE_ANDROID)
    MESSAGE("-- TARGET: ANDROID")
else()
    SET(LINUX TRUE)
    ADD_DEFINITIONS(-DENABLE_LINUX)
    MESSAGE("-- TARGET: LINUX")
endif()

# x264
SET(X264_PATH "${PROJECT_SOURCE_DIR}/x264")
SET(X264_INCLUDE_DIR ${X264_PATH})
SET(X264_LIBRARY ${X264_PATH})
INCLUDE_DIRECTORIES(${X264_INCLUDE_DIR})

# Faac
SET(FAAC_PATH "${PROJECT_SOURCE_DIR}/Faac")
SET(FAAC_INCLUDE_DIR "${FAAC_PATH}/include")
SET(FAAC_LIBRARY "${FAAC_PATH}/libfaac/.libs")
INCLUDE_DIRECTORIES(${FAAC_INCLUDE_DIR})


# Target
INCLUDE_DIRECTORIES(include)
INCLUDE_DIRECTORIES(src)

AUX_SOURCE_DIRECTORY(src SRC_CODEC)
AUX_SOURCE_DIRECTORY(src/plugin SRC_CODEC)
ADD_LIBRARY(dtcodec SHARED ${SRC_CODEC})
TARGET_LINK_LIBRARIES(dtcodec ${FAAC_LIBRARY}/libfaac.a)
TARGET_LINK_LIBRARIES(dtcodec ${X264_LIBRARY}/libx264.a)
if(ANDROID)
    TARGET_LINK_LIBRARIES(dtcodec OpenMAXAL)
    TARGET_LINK_LIBRARIES(dtcodec log)
endif()
if(LINUX)
    TARGET_LINK_LIBRARIES(dtcodec pthread)
endif()

# target - test
ADD_EXECUTABLE(codec_test test/codec_test.cpp)
TARGET_LINK_LIBRARIES(codec_test dtcodec)

INSTALL(TARGETS dtcodec
#RUNTIME DESTINATION bin
LIBRARY DESTINATION lib
ARCHIVE DESTINATION lib
)
INSTALL(DIRECTORY include/ DESTINATION /usr/local/include/${PROJECT_NAME})
